own clustering button/menu + fix task list overflow, view log with name

--- a/src/app/pages/explorer-page/explorer-page.component.scss
+++ b/src/app/pages/explorer-page/explorer-page.component.scss
@@ -155,6 +155,8 @@
 
 .task-list-container {
   padding: 0.5rem !important;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .uniprot p {
